# todoist-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: deploy.yml
src/: api_calls.rs  banner.rs  error.rs  key_handler.rs  main.rs  new_task.rs  projects.rs  sections.rs  task_edit.rs  tasks.rs  tui.rs
src/tui/: error.rs  help.rs  new_task.rs  task_editor.rs  utils.rs
